master

2.37.0
- noface
  Exclude 4chan x from executing on catalogs.
  Added Link Title for Youtube links.
  Added Ban Checker.

2.36.9
- noface
  Improved Linkifier to be much lighter.
  Readded archiver for /e/.
  Embedding:
    - Adds support for SoundCloud, Vocaroo, mp3/ogg/wav files.
    - Adds a menu button 'Embed all in post'.
- Mayhem
  Fix next/previous page keybinds.

2.36.8
- noface
  Added support for coloured IDs and post highlighting from the native 4chan extension.

2.36.7
- noface
  Added keybinds for math and eqn tags on /sci/.
  Added full image redirection to /mu/.
  Removed ArchiveLink redirection from /soc/ (URLs will still be redirected).
  Quick tags won't be inserted where not possible anymore (like spoilers on /g/).

2.36.6
- noface
  Improved checking for own post directly after posting. This should sort out a number of small hiccups.
  Fixed crossquotes not showing the correct archiver.
  Fixed yet another quirk in blank spoiler detection.

2.36.4
- noface
  Added support for posting with QR and tags on /f/.
  Added redirection for /c/ and /po/.
  Fixed spoiler detection not working on rare occasions.

2.36.3
- noface
  Added keybind to toggle the hide status of the QR.
  If Persistent QR is enabled the close keybind will only hide the QR.
  Fix Linkify not detecting blank spoiler tags.
  Readded 'Check for Update' which is now much less obstrusive.

2.36.2
- noface
  Per-board archivers can now be selected under the rice tab.
- Mayhem
  Added possibility to display unix timestamps with File Info Formatting.

2.36.1
- noface
  Archives now populate a submenu just like the quicklinks for the Filter.

2.36.0
- noface
  Updater should now check until own post is found.
  "Don't expand spoilers when using ImageExpand" should now work as expected and gets a new option.
  postContainer now adds a class 'hidden' when the stub is hidden.

2.35.9
- Mayhem
  Added thread creation QR cooldown.